# python_dev_container

./: .gitignore  README.md
.devcontainer/: devcontainer.json
app/: pyproject.toml
app/src/app/: main.py
docker/: .dockerignore  Dockerfile
