[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Bram Jochems <bram@riskatwork.nl>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
pytest = "^7.0"  # Replace with the latest version as needed
ruff = "^0.1"  # Replace with the latest version as needed

[tool.pytest]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
